--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,42 @@
-h1 {
-    font-size: normal;
-    margin-left: 25%;
-}
-
-section {
-    width: 50%;
-    float: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.gender-check {
-    margin-left: 15%;
-}
-
-.pass-lenght-info {
-    font-size: 12px;
-}
-
-.btn {
-    font-weight: bold;
-    width: 10%;
-    font-size: 15px;
-    text-align: center;
-}
-
-.gender-info {
-    width: 40%;
-}
-
-.form-check-reg {
-    margin-top: 25px;
-}
-
-.form-check-newsletter {
-    margin-top: -12px;
-}
+    h1 {
+        font-size: normal;
+        margin-left: 25%;
+    }
+    
+    section {
+        width: 50%;
+        float: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .gender-check {
+        margin-left: 15%;
+    }
+    
+    .pass-lenght-info {
+        font-size: 12px;
+    }
+    
+    .btn {
+        font-weight: bold;
+        width: 10%;
+        font-size: 15px;
+        text-align: center;
+    }
+    
+    .gender-info {
+        width: 40%;
+    }
+    
+    .form-check-reg {
+        margin-top: 25px;
+    }
+    
+    .form-check-newsletter {
+        margin-top: -12px;
+    }
+    
+    #basic-info {
+        margin-bottom: 20px;
+    }
