--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
     h1 {
-        font-size: normal;
-        margin-left: 25%;
+        width: 53%;
+        float: center;
+        margin-left: auto;
+        margin-right: auto;
     }
     
     section {
